# afro-evidence-ai-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/guidelines_vector_store/: documents.json  index.faiss  index.pkl
data/journals_vector_store/: documents.json  index.faiss  index.pkl
scripts/: build_vector_db.py
src/: api.py  config.py  get_hmis_tool.py  main.py  orchestrator.py  vector_tools.py
src/agents/: __init__.py  clinician_agent.py  clinician_research_agent.py  researcher_agent.py
src/data/guidelines_vector_store/: index.pkl
src/data/journals_vector_store/: documents.json  index.faiss  index.pkl
tests/: pdfprocessing.ipynb
